@@ -1,7 +1,7 @@
 ## Interface: 90100
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v107
+## Version: v108
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## DefaultState: Enabled
