@@ -1,3 +1,6 @@
+2021/08/20 v108
+	1. Add the unregister unit frame operation when secure group panel is deleted, so re-use them won't cause all unit settings continuely be cleared.
+
 2021/08/16 v106
 	1. The PLoop and other Scorpio Libs are embedded into the Scorpio.
 
